[gd_scene load_steps=5 format=3 uid="uid://dgcg014vk7ikd"]

[ext_resource type="Script" uid="uid://bp6sw5n34exvl" path="res://objects/train_body/train_body.gd" id="1_eox5q"]
[ext_resource type="Script" uid="uid://c6ux8l4nnkhpk" path="res://objects/train_body/audio.gd" id="2_n673f"]
[ext_resource type="AudioStream" uid="uid://wuh2fm04vc3e" path="res://objects/train_body/impact.wav" id="2_t0e4j"]
[ext_resource type="PackedScene" uid="uid://yk06amhw8mic" path="res://objects/train_joint/train_joint.tscn" id="2_vcua5"]

[node name="TrainBody" type="RigidBody3D" groups=["trains"]]
mass = 100.0
gravity_scale = 10.0
center_of_mass_mode = 1
freeze = true
freeze_mode = 1
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_eox5q")
drive_distance = 135.0
drive_duration = 1.65
joint = ExtResource("2_vcua5")
joint_offset = Vector3(0, 2.5, -7.75)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="Audio" type="Node" parent="."]
script = ExtResource("2_n673f")
min_impact_speed = 5.0
max_impact_speed = 200.0
max_impact_volume = 12.0

[node name="DestroyTimer" type="Timer" parent="Audio"]
wait_time = 2.0
one_shot = true

[node name="Impact" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("2_t0e4j")

[connection signal="body_entered" from="." to="Audio" method="_on_body_entered"]
[connection signal="dropped" from="." to="Audio" method="_on_dropped"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="timeout" from="Audio/DestroyTimer" to="Audio" method="_on_destroy_timer_timeout"]
[connection signal="finished" from="Audio/Impact" to="Audio" method="_on_impact_finished"]
